--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,10 @@
 html {
   font-family: 'Helvetiaca', sans-serif;
 }
+
+h1 {
+  background-color: rgb(51, 51, 51);
+  color: white;
+  padding: 20px;
+  text-align: center;
+}
