--- a/styles.css
+++ b/styles.css
@@ -3,8 +3,29 @@ html {
 }
 
 h1 {
-  background-color: rgb(51, 51, 51);
+  background-color: #333333;
   color: white;
   padding: 20px;
   text-align: center;
+  margin-bottom: 1px;
+}
+
+ul {
+  text-align: center;
+  padding-left: 0px;
+  margin-top: 0px;
+}
+
+.btn {
+  font-weight: bold;
+  text-decoration: none;
+  display: inline-block;
+  list-style: none;
+  background-color: rgb(211,211,211);
+  padding: 15px 10px;
+}
+
+.btn>a {
+  text-decoration: none;
+  color: white;
 }
